# sortingview

./: .gitignore  MANIFEST.in  README.md  jinjaroot.yaml  package.json  pyproject.toml  setup.cfg  setup.py
api/: apiInterface.ts  kacheryNodeRequest.ts  probeBackendProviders.ts  register.ts  registeredBackendProviders.ts  signPubsubMessage.ts
devel/: _extract_snippets.py  a.py  create_workspace.py  create_workspace_tmp.py  example_auth_config.yaml  example_spike_explorer.py  figurl_average_waveforms.py  figurl_average_waveforms_numpy.py  figurl_box_layout.py  figurl_experitime.py  figurl_mountainview.py  figurl_mountainview_spikeforest.py  figurl_sync.py  figurl_test.py  figurl_vegalite.py  figurl_workspace.py  file_share_remote_test.py  gather_spike_amplitudes.py  migrate_workspace_list.py  prepare_example_1.py  prepare_example_views.py  raw_traces_example.py  seriesview_spike_amplitudes.py  set_workspace_list.py  simple_file_sharing_backend.py  test_load_old_workspace.py  test_position_pdf_plot.py  test_precompute_memory_issue.py  test_prepare_spikesortingview_data.py  test_read_feed.py  test_write_feed.py  test_zenodo_upload.py
doc/: backend.md  changelog.md  changelog.txt  electron_mode.md  examples.md  features.md  franklab_usage.md  jupyter_integration.md  layouts.md  local_mode.md  opening-workspace-in-figurl.md
examples/: example1.py  example1_subsample.py  example2.py  example_annotations.py  example_autocorrelograms.py  example_average_waveforms.py  example_box_layout.py  example_confusion_matrix.py  example_cross_correlograms.py  example_image.py  (+24 more)
(+1324 files in other folders)
